# legym

./: .gitignore  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: activities.md  activity.md
legym/: README.md  __init__.py  activities.py  api.py  core.py  official.py  requester.py  response.py  user.py
responses/: sign.json
